<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_no">Question 1</string>
    <string name="which_choice_is_right">which choice is right.......................</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
</resources>