<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QuizFragment"
    android:padding="8dp">

    <TextView
        android:id="@+id/question_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/question_no"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question_no"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/which_choice_is_right"
        android:id="@+id/question_text"
        android:layout_marginHorizontal="16dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_buttons"
        app:layout_constraintTop_toBottomOf="@id/question_text">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choices_list"
            app:layout_constraintTop_toBottomOf="@id/question_text"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_navigate_before_black_24dp"
        android:text="@string/previous"
        android:id="@+id/previous"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
        android:text="@string/next"
        android:id="@+id/next"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/done"
        android:id="@+id/done"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>